# libft

./: Makefile  README.md  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  (+7 more)
ft_printf/: Makefile  ft_printf.h
ft_printf/bonuses/: ft_c_s_p.c  ft_d_i_u.c  ft_hex.c  utils_bonus.c
ft_printf/needed_libft/: libft.h
ft_printf/utilits/: ft_decimal_to_str.c  ft_flags.c  ft_format.c  ft_get_num_of_digits.c  ft_init.c  ft_putstr.c
get_next_line/: a.out  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  test.txt
includes/: get_next_line.h  libft.h
libft/: main.c
push_swap/: CMakeLists.txt
push_swap/src/: push_swap.c  push_swap.h
push_swap/src/libft/: chars_to_ints.c  libft.h
push_swap/src/logic/: calculate_moves.c  logic.h  logic_utils.c  sort_three_elements_stack.c
push_swap/src/stack/: array_to_stack.c  move_to_b.c  one_stack_operations.c  print_stack.c  stack.h  stack_utils.c  two_stacks_operations.c
src/ft_printf/: ft_c_s_p.c  ft_d_i_u.c  ft_decimal_to_str.c  ft_flags.c  ft_format.c  ft_hex.c  (+5 more)
(+48 files in other folders)
